--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,6 @@
             80
         ]
     },
-    "Lua.diagnostics.enable": true,
     "Lua.workspace.library": [
         "/usr/share/awesome/lib",
     ],
@@ -14,5 +13,17 @@
         "tag",
         "screen",
         "client"
-    ]
+    ],
+    "Lua.diagnostics.enable": true,
+    "Lua.format.defaultConfig": {
+        "indent_style": "space",
+        "quote_style": "double",
+        "call_arg_parentheses": "remove_table_only",
+        "local_assign_continuation_align_to_first_expression": "false",
+        "align_call_args": "true",
+        "align_function_define_params": "true",
+        "keep_one_space_between_namedef_and_attribute": "false",
+        "table_append_expression_no_space": "true",
+        
+    }
 }
